# utah-tech-beacon

./: .gitignore  README.md  index.html  scrape-meetup.js
functions/scraping-events/: .dockerignore  .gitignore  Dockerfile  README.md  dev-setup.sh  entrypoint.sh  main_dev.py  pyproject.toml
functions/scraping-events/.run/: main_dev.run.xml
functions/scraping-events/src/scraping_events/: env.py  exceptions.py  logging_config.py  main.py  main_api.py  main_cli.py  playwright.py  playwright_utils.py  response.py  schemas.py  scrape_events.py  scrape_meetup.py
src/: index.css
src/components/: AddEventModal.tsx  CalendarLinkModal.tsx  CalendarSidebar.tsx  CalendarView.tsx  EventsFilterControls.tsx  EventsSection.tsx  EventsTable.tsx  EventsTimeline.tsx  Footer.tsx  Hero.tsx  MultiSelectDropdown.tsx  Navbar.tsx  RssLinkModal.tsx
src/hooks/: useEventFiltering.ts
src/integrations/supabase/: client.ts  types.ts
src/pages/: Index.tsx
src/types/: events.ts
src/utils/: eventUrls.ts
supabase/: config.toml
supabase/functions/: scrape-events.ts
supabase/functions/generate-ical/: index.ts
supabase/functions/generate-rss/: index.ts
supabase/functions/scrape-events/: index.ts
supabase/functions/scrape-meetup-events/: index.ts
supabase/migrations/: 20250610020913-1cc108ae-8b18-476e-827e-03a8e272e68e.sql
