[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"

[project]
name = "scraping-events"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "playwright~=1.52.0",
    "pydantic>=2.11.5,<3",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "python-dotenv>=1.1.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "ALL",
    # rules to include even if a parent is listed as ignored:
    "W605", "D419", "G010", "G101", "G2", "RET502", "RET503",
]
extend-ignore = [
    # explicit conflicts with auto-formatter:
    "W191", "E111", "E114", "E117", "D206", "D300", "Q000", "Q001", "Q002", "Q003", "COM812", "COM819", "E501",
    # comments are always fine:
    "TD", "FIX", "ERA",
    # don't care:
    "C90", "D", "DOC", "ANN002", "ANN003", "ANN401", "S104", "S113", "S311", "FBT",
    "B904", "B905", "CPY", "C408", "EM", "G", "RSE", "RET", "TC", "PTH123", "PLR0133",
    "PLR09", "PLR1711", "PLR2004", "TRY003", "TRY301",
    # actually makes code harder to read:
    "UP015", "PT003", "SIM105", "SIM108",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true
suppress-dummy-args = true

[tool.mypy]
mypy_path = "src,tests"
files = ["."]
check_untyped_defs = true

[tool.poe.tasks]
lint-ruff = "uvx ruff check"
lint-mypy = "mypy"
lint = ["lint-ruff", "lint-mypy"]
